# KUEater-Backend

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  build.rs  example.env
docker/: Dockerfile  docker-compose.yaml  init.sql
migrations/: 0001_init.down.sql  0001_init.up.sql  0002_indexing.down.sql  0002_indexing.up.sql  0003_recsys_v1.up.sql  0004_activity.up.sql  0005_data_retrieval.up.sql  0006_auth.up.sql  0007_helpful_functions.up.sql  0008_toggles.up.sql  0009_alter_role_type_v1.up.sql
src/: db.rs  main.rs
src/agent/: command.rs  mod.rs
src/client/: agent.rs  mod.rs
src/middleware/: google_auth.rs  mod.rs
src/service/: after.rs  backend.rs  fetch.rs  getters.rs  index.rs  mod.rs  profile.rs  review.rs  saved.rs  search.rs
src/service/activity/: mod.rs
src/service/home/: mod.rs
src/service/review/: mod.rs
src/service/search/: mod.rs
